# DeepraTestAssignment

./: .gitignore  .spaceignore  Makefile  README.md  Spacefile  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  space-deploy.yml
app/: __init__.py  main.py
