[tool.poetry]
name = "deepra-test-assignment"
version = "0.1.0"
description = "A test assignment for employment in Deepra company."
authors = ["Mihail Butvin <butvin.mihail@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
