[tool.poetry]
name = "deepra-test-assignment"
version = "0.1.0"
description = "A test assignment for employment in Deepra company."
authors = ["Mihail Butvin <butvin.mihail@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
wemake-python-styleguide = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
